updated to correct url

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     Make a new short url:
-    <pre><code>https://hmngwy.heroku.com/new/https://yoururl.com</code></pre>
+    <pre><code>https://hmngwy.herokuapp.com/new/https://yoururl.com</code></pre>
     You'll be given an short URL that redirects to your url.
 </div>
 </body>
